Correct z-indexes

--- a/src/less/modals.less
+++ b/src/less/modals.less
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.4);
-    z-index: 10000;
+    z-index: 10600;
     visibility: hidden;
     opacity: 0;
     .transition(@modalDuration);
@@ -26,7 +26,7 @@
     }
 }
 .popup-overlay {
-    z-index: 9990;
+    z-index: 10200;
 }
 .modal {
     width: 270px;
@@ -315,7 +315,7 @@ input.modal-prompt-input {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: 10400;
     background: #fff;
     .border-box();
     display: none;
@@ -351,18 +351,23 @@ input.modal-prompt-input {
             .translate3d(0,1024px,0);
         }
     }
-    // iPhone with statusbar overlay
-    @media all and (max-width:629px) and (max-height:629px) {
-        html.with-statusbar-overlay & {
+
+}
+// iPhone with statusbar overlay
+@media all and (max-width:629px), (max-height:629px) {
+    html.with-statusbar-overlay {
+        .popup {
             height: ~"-webkit-calc(100% - 20px)";
             height: ~"-moz-calc(100% - 20px)";
             height: ~"-ms-calc(100% - 20px)";
             height: ~"calc(100% - 20px)";
             top: 20px;
         }
+        .popup-overlay {
+            z-index: 9800;
+        }
     }
 }
-
 //Preloaders modals
 .modal .preloader {
     width: 34px;
