--- a/src/less/statusbar.less
+++ b/src/less/statusbar.less
@@ -11,7 +11,7 @@ html.with-statusbar-overlay body{
 }
 .statusbar-overlay {
     background: @navbarBg;
-    z-index: 9999; // A bit lower than .modals-overlay
+    z-index: 10000; // A bit lower than .modals-overlay
     position: absolute;
     left: 0;
     top: 0;
